...
        <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".1">

            <ToggleButton
                android:id="@+id/dislikeButton"
                style="@style/downvote_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,2:1"
                android:layout_gravity="end"
                android:layout_marginBottom="8dp"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ToggleButton
                android:id="@+id/likeButton"
                style="@style/downvote_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,2:1"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
...
